# zea

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CITATION.cff  Dockerfile  Dockerfile.base  Dockerfile.private  Install.md  LICENSE  README.md  app.py  beamform.py  build_all_images.sh  config.py  config.yml  custom_installation.bat  docker-compose.yml  entrypoint.sh  main.py  main_test.py  metrics.py  motd.sh  pipeline.py  pipeline_config.yaml  post-release.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_bf.py  testbf.py
.devcontainer/: devcontainer.json
.github/workflows/: actions.yaml  build_docs.yaml  ci-pipeline.yaml  deploy-docs.yaml  docker_build.yaml  docs.yaml  paper.yaml  publish.yaml  pylint.yaml  pylint.yml  pylint_docker.yaml  tests.yaml
conda/: tf26_usbmd.yaml  tf26_usbmd.yml  tf26_usbmd_pip.txt  tf29_usbmd_pip.txt
configs/: config_camus.yaml  config_carotid.yaml  config_echonet.yaml  config_echonetlvh.yaml  config_picmus_iq.yaml  config_picmus_rf.yaml  probes.yaml
docs/: .firebaserc  CONTRIBUTING.md  Makefile  README.md  changelog.rst  conf.py  contributing.rst  docs-requirements.txt  example_google_docstrings.py  examples.rst  firebase.json  index.rst  modules.rst  package-lock.json  usbmd.backend.jax.rst  usbmd.data.rst  usbmd.rst
docs/functions/: .eslintignore  index.js  package-lock.json  package.json
docs/pdoc/: README.md
docs/pdoc_template/: logo.mako
docs/public/: test.html
docs/scripts/: predeploy.js
docs/server/: Dockerfile  default.env  host_docs.py
docs/source/: about.rst  conf.py  contributing.rst  data-acquisition.rst  examples.rst  getting-started.rst  index.rst  installation.rst  models.rst  modules.rst  parameters.rst  parameters_doc.py  pipeline.rst  references.bib  removeme.rst  updog.rst  usbmd.agent.gumbel.rst  usbmd.agent.masks.rst  usbmd.agent.rst  usbmd.agent.selection.rst  usbmd.backend.autograd.rst  usbmd.backend.jax.rst  usbmd.backend.rst  usbmd.backend.tensorflow.dataloader.rst  usbmd.backend.tensorflow.layers.apodization.rst  usbmd.backend.tensorflow.layers.rst  usbmd.backend.tensorflow.layers.utils.rst  usbmd.backend.tensorflow.losses.rst  usbmd.backend.tensorflow.models.lista.rst  usbmd.backend.tensorflow.models.rst  usbmd.backend.tensorflow.rst  usbmd.backend.tensorflow.utils.callbacks.rst  usbmd.backend.tensorflow.utils.rst  usbmd.backend.tensorflow.utils.utils.rst  usbmd.backend.torch.losses.rst  usbmd.backend.torch.rst  usbmd.backend.torch.utils.rst  usbmd.config.config.rst  usbmd.config.create.rst  usbmd.config.parameters.rst  (+51 more)
envs/dev-tf-jax/: pyproject.toml
envs/dev-torch/: pyproject.toml
examples/: loading_usbmd_data_file.ipynb  train_lista.py
examples/LISTA/: train_lista.py
examples/agent/: selection.ipynb
examples/das_lumavision/: das_lumavision_2.py
examples/deep_beamforming/: dataloader.py  example_config.yaml  example_config_nMAP.yaml  train.py  train_beamformer.py
examples/diffusion/: diffusion_example.py
examples/echonet/: echonet_example.py
examples/echonetlvh/: echonetlvh_example.py  plot_echonetlvh_sample.py  plot_sample.py
examples/lpips/: lpips_example.py
examples/notebooks/: CAMUS_visualize.ipynb  PICMUS_beamforming.ipynb  README.md  camus.py  loading_usbmd_BS100BW.ipynb  loading_usbmd_data_file.ipynb  pipeline_example.ipynb  selection_tool_example.ipynb  template_notebook.ipynb
examples/segmentation/: carotid_example.py  echonet_example.py
examples/taesd/: taesd_example.py  taesd_example_torch.py  test-taesd-tensorflow.py  test-taesd-torch.py
examples/unet/: unet_example.py
paper/: paper.bib  paper.md
requirements/: requirements.txt  requirements_full.txt  requirements_ml.txt
static/: script.js
tests/: __init__.py  config_test.yaml  conftest.py  helpers.py  helpers2.py  test_agent.py  test_augmentations.py  test_autograd.py  test_basics.py  test_bops.py  test_caching.py  test_compare_beamformers.py  test_configs.py  test_dataset.py  test_device.py  test_display.py  test_file.py  test_fnumber_mask.py  test_generative.py  test_gpu_usage.py  test_gumbel.py  test_h5_dataloader.py  test_imports.py  test_interface.py  test_io_lib.py  test_losses.py  test_losses_and_metrics.py  test_notebooks.py  test_object.py  test_operations.py  test_ops.py  test_ops2.py  test_ops_beamformer.py  test_ops_infra.py  test_ops_v2.py  test_parameters.py  test_pfield.py  test_probes.py  test_processing.py  test_pytorch_beamforming.py  (+14 more)
tests/data/: __init__.py  test_dataloader.py  test_dataset.py  test_file.py
tests/tools/: test_hf.py
usbmd/: README.md  __init__.py  __main__.py  __version__.py  backend_aliases.py  beamformer.py  bops.py  config.py  core.py  datapaths.py  display.py  generate.py  initialization.py  interface.py  io_lib.py  log.py  metrics.py  ops.py  ops_v2.py  parameters.py  registry.py  scan.py  setup.py  setup_usbmd.py  simulator.py  tensor_ops.py  ui.py  usbmd_darkmode.mplstyle  usbmd_gui.py  utils.py  visualize.py
usbmd/agent/: __init__.py  gumbel.py  masks.py  selection.py
usbmd/backend/: __init__.py  aliases.py  autograd.py  tf2jax.py
usbmd/beamform/: beamformer.py  pfield.py  pixelgrid.py
usbmd/config/: __init__.py  comments.py  config.py  create.py  parameters.py  validation.py
usbmd/data/: README.md  __init__.py  augmentations.py  data_format.py  dataloader.py  datasets.py  file.py  layers.py  preset_utils.py  read_h5.py  utils.py
usbmd/data_format/: README.md  __init__.py  convert_camus.py  convert_image_dataset.py  convert_picmus.py  usbmd_data_format.py
usbmd/internal/: cache.py  checks.py  convert.py  core.py  device.py  git_info.py  io_lib.py  operators.py  parameters.py  registry.py  setup_usbmd.py  viewer.py
usbmd/models/: README.md  __init__.py  base.py  carotid_segmenter.py  dense.py  diffusion.py  echonet.py  generative.py  gmm.py  (+8 more)
zea/: __init__.py  __main__.py  config.py  datapaths.py  display.py  generate.py  interface.py  io_lib.py  log.py  metrics.py  ops.py  probes.py  scan.py  simulator.py  tensor_ops.py  utils.py  visualize.py
(+233 files in other folders)
