[project]
name = "usbmd"
version = "2.4.0"
description = "A Toolbox for Cognitive Ultrasound Imaging. Provides a set of tools for processing of ultrasound data, all built in your favorite machine learning framework."
authors = [
    { name = "Tristan Stevens", email = "t.s.w.stevens@tue.nl" },
    { name = "Wessel van Nierop", email = "w.l.v.nierop@tue.nl" },
    { name = "Ben Luijten", email = "w.m.b.luijten@tue.nl" },
    { name = "Vincent van de Schaft", email = "v.v.d.schaft@tue.nl" },
    { name = "Oisín Nolan", email = "o.i.nolan@tue.nl" },
    { name = "Beatrice Federici", email = "b.federici@tue.nl" },
    { name = "Louis van Harten", email = "l.d.v.harten@tue.nl" },
    { name = "Simon Penninga", email = "s.w.penninga@tue.nl" },
    { name = "Noortje Schueler", email = "n.i.p.schueler@tue.nl" },
    { name = "Ruud van Sloun", email = "r.j.g.v.sloun@tue.nl" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.13"
keywords = ["ultrasound", "machine learning", "beamforming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "keras >=3.9",
    "h5py >=3.11",
    "numpy >= 1.24, <2.0",
    "matplotlib >=3.8",
    "scipy >=1.13",
    "pillow >=10",
    "schema >=0.7",
    "tqdm >=4",
    "pyyaml >=6",
    "decorator >=5",
    "huggingface_hub >=0.26",
    "wandb >=0.18",
    "wget >=3.2",
    # can we make these optional or remove?
    "pydicom >=2.4",
    "scikit-image >=0.23",
    "scikit-learn >=1.4",
]
[project.optional-dependencies]
dev = [
    # tests
    "pytest>=8.1",
    "pylint>=3.1",
    "papermill>=2.4",
    "ipykernel>=6.29.5",
    "cloudpickle>=3.1.1",
    # docs
    "sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "mock",
    "myst-parser",
    "nbsphinx",
    "furo",
    "PyStemmer",
    # display
    "opencv-python-headless>=4",
]

tests = [
    "pytest>=8.1",
    "pylint>=3.1",
    "papermill>=2.4",
    "ipykernel>=6.29.5",
    "cloudpickle>=3.1.1"
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "mock",
    "myst-parser",
    "nbsphinx",
    "furo",
    "PyStemmer"
]
jax = [
    "jax[cuda12_pip]>=0.4.26"
]
display = [
    "opencv-python>=4",
]
display-headless = [
    "opencv-python-headless>=4",
]

[project.urls]
Homepage = "https://github.com/tue-bmd/ultrasound-toolbox/"
Repository = "https://github.com/tue-bmd/ultrasound-toolbox/"

[project.scripts]
usbmd = "usbmd.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$|\.ipynb$' # Include both Python files and Jupyter notebooks

[tool.isort]
profile = "black"
line_length = 88

# To update the poetry.lock file run `sudo /opt/poetry-venv/bin/python3 -m poetry lock` inside the usbmd container (where poetry is installed)
# Otherwise a simple `poetry lock` will suffice.
# Rebuild docker image afterwards to match the lock file!
