# setup.cfg

[metadata]
name = local_usbmd
version = 1.0
url = https://github.com/tristan-deep/Ultrasound-BMd/
author = Tristan Stevens, Ben Luijten, Nishith Chennakeshava, Vincent van de Schaft
author_email = t.s.w.stevens@tue.nl
license = Not specified
description = A collection of ultrasound tools (Python) such as beamforming code, visualization tools and deep learning scripts for ultrasound researchers.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
packages = usbmd
python_requires = >=3.9
install_requires=
    tensorflow-gpu==2.9.2
    keras==2.9.3
    torch==1.13.1
    matplotlib
    numpy
    scipy
    pillow
    scikit-image
    scikit-learn
    h5py
    pandas
    opencv-python
    wandb
