# setup.cfg

[metadata]
name = usbmd
version = attr: usbmd.__version__
url = https://github.com/tue-bmd/ultrasound-toolbox/
author = Tristan Stevens, Ben Luijten, Nishith Chennakeshava, Vincent van de Schaft, Oisín Nolan, Wessel van Nierop, Beatrice Federici
author_email = t.s.w.stevens@tue.nl
license = Not specified
description = A collection of ultrasound tools (Python) such as beamforming code, visualization tools and deep learning scripts for ultrasound researchers.
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Topic :: Scientific/Engineering :: Ultrasound
    Topic :: Scientific/Engineering :: Deep Learning

[options]
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib
    numpy
    scipy
    pillow
    scikit-image
    scikit-learn
    h5py
    pandas
    opencv-python
    schema
    tqdm
    pyyaml
    decorator
    flask
    futures3
    tk
    pydicom
    PyQt5
    bm3d
    deepdiff

[options.packages.find]
where = .
include = usbmd*

[options.extras_require]
test = pytest
linter = pylint
tf = tensorflow>=2.6
torch = torch>=1.13

[options.entry_points]
console_scripts =
    executable-name = usbmd.ui:main