[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
usbmd = { path = "../../", develop = true }
torch = { version = "^2.3", source = "torch-cpu" }
torchvision = { version = "^0.18", source = "torch-cpu" }
tensorflow = { version = "^2.16", extras = ["and-cuda"] }
tensorflow-probability = "^0.24"
tf-keras = "^2.16"
keras-cv = "^0.9"
jax = { version = "^0.4", extras = ["cuda12"] }

[tool.poetry.group.general.dependencies]
albumentations = "^1.4"
wandb = "^0.16"
torchmetrics = "^1.3"
ax-platform = "^0.4"
SimpleITK = "^2.3"
ipympl = "^0.9"
ipykernel = "^6.29"
huggingface_hub = { version = "^0.22", extras = ["cli"] }
pathspec = "^0.12"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"