[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
usbmd = { path = "../../", develop = true }
torch = { version = "^2.3", source = "torch-cu121" }
torchvision = { version = "^0.18", source = "torch-cu121" }
tensorflow = "^2.16"
tensorflow-probability = "^0.24"
tf-keras = "^2.16"
keras-cv = "^0.9"
jax = "^0.4"

[tool.poetry.group.general.dependencies]
albumentations = "^1.4"
wandb = "^0.16"
torchmetrics = "^1.3"
ax-platform = "^0.4"
SimpleITK = "^2.3"
ipympl = "^0.9"
ipykernel = "^6.29"
huggingface_hub = { version = "^0.22", extras = ["cli"] }
pathspec = "^0.12"

[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"